--- a/maploction/package.json
+++ b/maploction/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-leaflet/core": "^3.0.0",
+    "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
